Add events websocket
